--- a/src/config/cintient.conf.sample
+++ b/src/config/cintient.conf.sample
@@ -40,15 +40,14 @@ define('CINTIENT_LOG_SEVERITY', CINTIENT_LOG_SEVERITY_DEBUG);
 define('CINTIENT_TEMP_UNIT_TESTS_DEFAULT_DIR', 'src/tests/');
 define('CINTIENT_TEMP_UNIT_TESTS_DEFAULT_INCLUDE_MATCH', '*Test.php');
 
-
-define('CINTIENT_WORK_DIR', ''); // TODO: This should be pulled from the user .ini config file
+define('CINTIENT_INSTALL_DIR', realpath(dirname(__FILE__) . '/../..') . '/');
+define('CINTIENT_WORK_DIR', '/www/.cintient/');
 define('LOG_FILE', CINTIENT_WORK_DIR . 'cintient.log');
-define('CINTIENT_INSTALL_DIR', '');
 define('CINTIENT_JUNIT_REPORT_FILENAME', 'log-junit.xml');
 define('CINTIENT_CODECOVERAGE_XML_REPORT_FILENAME', 'codecoverage.xml');
 define('CINTIENT_CODECOVERAGE_HTML_DIR', 'codecoverage/');
 
-define('CINTIENT_BASE_URL', ''); // Without trailing slash
+define('CINTIENT_BASE_URL', 'http://cintient'); // Without trailing slash
 
 define('CINTIENT_PROJECTS_DIR', CINTIENT_WORK_DIR . 'projects/');
 
@@ -130,13 +129,11 @@ define('CINTIENT_PHPCODESNIFFER_REPORT_FULL_FILE', 'phpcsReportFull.txt');
 
 
 // Register our autoloader
-function autoloadCintient($classname)
-{
+spl_autoload_register(function ($classname) {
   if (strpos($classname, '_') !== false) {
     $classname = str_replace('_', '/', $classname);
   }
   if (is_file(CINTIENT_INSTALL_DIR . 'src/core/' . $classname . '.php')) {
     include 'src/core/' . $classname . '.php';
   }
-}
-spl_autoload_register('autoloadCintient');
+});
