Improvements on the Database class, this hopefully fixes all SQLite locking whoes we were suffering from so far. Removed unnecessary transaction use from special PHP task, PhpDepend. Visually aligned the loading indicators on the dashboard. Small change to the README.

--- a/src/config/cintient.conf.sample
+++ b/src/config/cintient.conf.sample
@@ -109,6 +109,10 @@ define('CHART_JUNIT_DEFAULT_WIDTH', 790);
 // Set the include path
 set_include_path(get_include_path() . PATH_SEPARATOR . CINTIENT_INSTALL_DIR);
 
+//
+// SQL
+//
+define('CINTIENT_SQL_BUSY_RETRIES', 5);
 
 //
 // PHP_Depend
